--- a/workouts/src/main/res/navigation/workouts_graph.xml
+++ b/workouts/src/main/res/navigation/workouts_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_graph"
+    android:id="@+id/workouts_graph"
     app:startDestination="@id/workoutsFragment">
     <fragment
         android:id="@+id/workoutsFragment"
@@ -12,17 +12,13 @@
 
         <action
             android:id="@+id/action_workoutsFragment_to_workoutCardFragment"
-            app:destination="@id/workoutCardFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
+            app:destination="@id/workoutCardFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/workoutCardFragment"
         android:name="com.vgve.workouts.presentation.workoutcard.WorkoutCardFragment"
         android:label="fragment_workoutcard"
-        tools:layout="@layout/fragment_workoutcard"/>
+        tools:layout="@layout/fragment_workout_card"/>
 
 </navigation>
