--- a/workouts/src/main/res/drawable/bg_bottom_sheet.xml
+++ b/workouts/src/main/res/drawable/bg_bottom_sheet.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FFF" />
+    <solid android:color="?android:attr/windowBackground" />
     <corners
         android:topLeftRadius="20dp"
         android:topRightRadius="20dp" />
