--- a/workouts/src/main/res/drawable/bg_item.xml
+++ b/workouts/src/main/res/drawable/bg_item.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="10dip"/>
-            <stroke android:width="1dip" android:color="@color/cardview_dark_background"/>
+            <stroke android:width="1dip" android:color="?android:attr/textColorPrimary"/>
         </shape>
     </item>
 </selector>
