--- a/workouts/src/main/res/layout/item_workout.xml
+++ b/workouts/src/main/res/layout/item_workout.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="@color/design_default_color_on_secondary"
+            android:textColor="?android:attr/textColorPrimary"
             android:maxLines="1"
             android:ellipsize="end"
             android:gravity="center"
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="14sp"
-            android:textColor="@color/design_default_color_on_secondary"
+            android:textColor="?android:attr/textColorPrimary"
             android:drawableStart="@drawable/ic_description"
             android:drawablePadding="4dp"
             app:layout_constraintTop_toBottomOf="@id/tv_title"
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="14sp"
-            android:textColor="@color/design_default_color_on_secondary"
+            android:textColor="?android:attr/textColorPrimary"
             android:drawableStart="@drawable/ic_type"
             android:drawablePadding="4dp"
             app:layout_constraintTop_toBottomOf="@id/tv_description"
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="14sp"
-            android:textColor="@color/design_default_color_on_secondary"
+            android:textColor="?android:attr/textColorPrimary"
             android:drawableStart="@drawable/ic_duration"
             android:drawablePadding="4dp"
             app:layout_constraintTop_toBottomOf="@id/tv_type"
