--- a/workouts/src/main/res/layout/fragment_workouts.xml
+++ b/workouts/src/main/res/layout/fragment_workouts.xml
@@ -10,7 +10,9 @@
         android:id="@+id/cl_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="16dp">
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp">
 
         <SearchView
             android:id="@+id/sv"
