--- a/workouts/src/main/res/layout/fragment_workout_card.xml
+++ b/workouts/src/main/res/layout/fragment_workout_card.xml
@@ -74,6 +74,7 @@
         android:keepScreenOn="true"
         app:show_buffering="when_playing"
         app:use_controller="true"
+        app:controller_layout_id="@layout/layout_controls"
         app:layout_constraintTop_toBottomOf="@id/cl_main"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
