--- a/player/src/main/res/layout/custom_player_view.xml
+++ b/player/src/main/res/layout/custom_player_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,5 +13,4 @@
         app:controller_layout_id="@layout/layout_controls"
         app:show_buffering="when_playing"
         app:use_controller="true" />
-
-</FrameLayout>
+</merge>
