--- a/player/src/main/res/layout/layout_controls.xml
+++ b/player/src/main/res/layout/layout_controls.xml
@@ -19,6 +19,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/iv_replay"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_replay"
+        app:tint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
         android:id="@+id/iv_forward"
         android:layout_width="36dp"
         android:layout_height="36dp"
@@ -72,6 +83,15 @@
             android:textSize="14sp"
             android:textStyle="bold"
             tools:text="00:00" />
+
+        <ImageView
+            android:id="@+id/iv_mute"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/ic_volume_on"
+            app:tint="?android:attr/textColorPrimary" />
 
         <ImageView
             android:id="@+id/iv_settings"
