--- a/workouts/src/main/res/layout/fragment_workout_card.xml
+++ b/workouts/src/main/res/layout/fragment_workout_card.xml
@@ -66,7 +66,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.media3.ui.PlayerView
+    <com.vgve.player.presentation.ui.CustomPlayerView
         android:id="@+id/pv_workout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
