--- a/player/src/main/res/menu/menu_speed.xml
+++ b/player/src/main/res/menu/menu_speed.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/speed_slow"
-        android:title="0.5x"/>
+        android:title="@string/speed_0_5x"/>
     <item
         android:id="@+id/speed_normal"
-        android:title="1x"/>
+        android:title="@string/speed_1x"/>
     <item
         android:id="@+id/speed_fast"
-        android:title="1.25x"/>
+        android:title="@string/speed_1_25x"/>
     <item
         android:id="@+id/speed_faster"
-        android:title="1.5x"/>
+        android:title="@string/speed_1_5x"/>
     <item
         android:id="@+id/speed_fastest"
-        android:title="2x"/>
+        android:title="@string/speed_2x"/>
 </menu>
